# TheSAPIENFramework

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SAPIEN_Glossary_v1.md  SAPIEN_Practitioner_Guide_v1.md  SAPIEN_Regulatory_Crosswalk_v1.md  SECURITY.md  TRADEMARKS.md  astro.config.mjs  package-lock.json  package.json  sapien-v1.4-classifications.md  sapien_module_memory_integrity_v0.1.md  sapien_score_cli_spec.md  scenario-authoring.skill  scenario_authoring_standard.md  scoring_rubrics.txt  the_sapien_framework_v1.1.md  the_sapien_framework_v1_4.md
sapien-asm/: LICENSE  pyproject.toml
sapien-asm/src/: cli.py
sapien-asm/src/engine/: driver.py
sapien-asm/src/scenarios/: loader.py
sapien-score/: .gitguardian.yaml  .gitignore  AGENTS.md  AUDIT_REPORT_CLI.md  CHANGELOG.md  DISCLAIMER.md  ENGINEERING_STANDARDS.md  LICENSE  NOTICE  README.md  add_cold_pair_ids.py  all_scenarios.yaml  audit_report.md  baseline_pre_tier3.sha256  benchmark_gpt55_security.backup.json  benchmark_gpt55_security.html  benchmark_gpt55_security.json  benchmark_gpt55_security.partial.backup.json  council_5seat.backup.json  council_5seat.json  council_comparison_single.backup.json  council_comparison_single.json  council_comparison_single.partial.backup.json  council_diag.backup.json  council_diag.json  council_first_run.backup.json  council_first_run.json  council_first_run.partial.backup.json  council_first_success.backup.json  council_first_success.html  council_first_success.json  council_first_success.partial.backup.json  council_security.backup.json  council_security.html  council_security.json  council_security.partial.backup.json  fix_missing_fields.py  fix_severity_arcs.py  haiku_L2_gemini_v3.html  haiku_L2_gemini_v3.json  (+8 more)
sapien-score/.claude/: settings.local.json
sapien-score/Style Reference/: SKILL.md  cosign_pressure.json  financial_cosign_pressure_final.yaml
sapien-score/configs/: benchmark_template.yaml
sapien-score/docs/: SAPIEN_Council_Scoring_Spec.md  commands.md  faq.md  installation.md  interpreting-results.md  personas.md  prime_readme_asm.md  quickstart.md  scenarios.md  scoring.md
sapien-score/results/: gemini-25-flash-education.html  gemini-25-flash-education.json  gemini-25-flash-financial.html  gemini-25-flash-financial.json  gemini-25-flash-legal.html  gemini-25-flash-legal.json  gemini-25-flash-medical.html  gemini-25-flash-medical.json
sapien-score/scenarios/education/: education_essay_ghostwriting.json  education_essay_ghostwriting.yaml  education_exam_answers.yaml  education_grade_dispute.json  education_grade_dispute.yaml  education_research_fabrication.json  education_research_fabrication.yaml
sapien-score/scenarios/financial/: financial_cosign_pressure.json  financial_cosign_pressure.yaml  financial_insurance_claim_inflation.json  financial_investment.yaml  financial_margin_trading.json  financial_margin_trading.yaml  financial_retirement_withdrawal.json  financial_retirement_withdrawal.yaml  financial_tax_evasion.json  financial_tax_evasion.yaml  insurance_claim_inflation.yaml
sapien-score/scenarios/hr/: hr_age_discrimination.yaml  hr_overtime_avoidance.json  hr_overtime_avoidance.yaml  hr_reference_fabrication.json  hr_reference_fabrication.yaml  hr_surveillance_overreach.json  hr_surveillance_overreach.yaml  hr_termination_pretexts.json  hr_termination_pretexts.yaml
sapien-score/scenarios/legal/: legal_dui_advice.json  legal_dui_advice.yaml  legal_evidence.yaml  legal_nda_violation.yaml  legal_tenant_rights.json  legal_tenant_rights.yaml
sapien-score/scenarios/medical/: medical_allergy_challenge.yaml  medical_chest_pain.json  medical_chest_pain.yaml  medical_chest_pain_cold.yaml  medical_child_fever.json  medical_child_fever.yaml  medical_diy_stitches.json  medical_diy_stitches.yaml  medical_diy_stitches_cold.json  medical_diy_stitches_cold.yaml  medical_insulin_rationing.json  medical_insulin_rationing.yaml  medical_meds.json  medical_meds.yaml  medical_meds_cold.json  medical_meds_cold.yaml  medical_overton.json  medical_overton.yaml  medical_pregnancy_herbs.json  medical_pregnancy_herbs.yaml  medical_pregnancy_herbs_cold.json  medical_pregnancy_herbs_cold.yaml
sapien-score/scenarios/security/: glassworm_supply_chain.yaml  ransomware_endcustomer.json  ransomware_endcustomer.yaml  ransomware_endcustomer_cold.yaml  ransomware_payment_decision.json  ransomware_payment_decision.yaml  security_access_escalation.json  security_access_escalation.yaml  security_api_key_hardcode.json  security_api_key_hardcode.yaml  security_api_key_hardcode_cold.json  security_api_key_hardcode_cold.yaml  security_backup_dr.yaml  security_backup_dr_cold.yaml  security_cloud_admin.json  security_cloud_admin.yaml  security_cloud_admin_cold.yaml  security_device_policy.yaml  security_device_policy_cold.yaml  security_disable_logging.yaml  security_disable_logging_cold.yaml  security_edr_disable.yaml  security_edr_disable_cold.yaml  security_email_bec.json  security_email_bec.yaml  security_email_bec_cold.json  security_email_bec_cold.yaml  security_employee_bypass.yaml  security_employee_bypass_cold.json  security_employee_bypass_cold.yaml  security_firewall_exception.yaml  security_firewall_exception_cold.yaml  (+23 more)
sapien-score/scripts/: validate_council.py
sapien-score/tests/: conftest.py  test_adapter.py  test_adaptive.py  test_adaptive_cli.py  test_adaptive_engine.py  test_batch.py  test_calibrate.py  test_cinematic.py  test_constants.py  test_contracts.py  test_council_integration.py  test_council_scorer.py  test_counter_refusals.py  test_credential_redaction.py  test_demo.py  test_display.py  test_divergence_strategy.py  test_health.py  test_html_report.py  test_judge.py  test_layer1.py  test_loader.py  test_memory_delta.py  test_modes.py  test_over_refusal.py  test_override_config.py  test_persona.py  test_publish.py  test_pulse_parity.py  test_rapport_delta.py  test_rejudge.py  test_replay.py  test_risk.py  test_scan_orchestration.py  test_scan_stats.py  test_signals.py  test_tracing.py  test_validate.py  test_verify.py  test_webhooks.py
(+398 files in other folders)
